# cat

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  cat.opam  dune-project
lib/: Category.ml  Core.ml  Factory.ml  Instance.ml  Iter.ml  Lib.ml  Mixins.ml  Morphism.ml  Notation.ml  Notation_factory.ml  Number.ml  Recursion.ml  Structure.ml  Typeclass.ml  Typeclass_notation.ml  base.ml  base_syntax.ml  common.ml  dune  factory.ml  instance.ml  number.ml
test/: dune
